[package]
name = "cowsay"
version = "0.1.4"
authors = ["Jose Perez <28468662+ThisNekoGuy@users.noreply.github.com>", "duck <113956421+duckfromdiscord@users.noreply.github.com>"]

[dependencies]
phf = { version = "0.7.24", features = ["macros"] }
rust-embed = { version = "5.1.0", features = ["interpolate-folder-path"] }
clap = "4.4.7"
rand = "0.8.5"
